Actions
Bug #8914
closedloader: gcc 4.4.4 fails to allocate register for do_cpuid()
Start date:
2017-12-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
The gcc 4.4.4 does fail with inline assembler code and PIC mode. Will revert this patch once we can use more modern compiler.
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 6efcf43c2657773c50e5f6c946b05c4b2004a22b
commit 6efcf43c2657773c50e5f6c946b05c4b2004a22b Author: Toomas Soome <tsoome@me.com> Date: 2018-02-05T15:00:25.000Z 8914 loader: gcc 4.4.4 fails to allocate register for do_cpuid() Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Richard Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions